tests/tooling/fixtures/native/recovery/negative/negative_loop_continue_outside.objc3
module NegativeLoopContinueOutside;
// Expected diagnostic code(s): O3S213.

fn main() -> i32 {
  continue;
  return 0;
}
